# -Laboratory6-OpenGL

39-40,43/Hw2_studentID/: Hw2_studentID.vcxproj  main.cpp
41/: README.md  VME.sln
41/VME/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Core.cpp  Engine.cpp  Engine.h  Exception.cpp  Exception.h  GBO.cpp  GBO.h  GL-Linker.h  GLM-Linker.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Time.cpp  Time.h  Transform.h  Utilities.h  VME.vcxproj  VME.vcxproj.filters  Velocity.cpp  Velocity.h  Window.cpp  Window.h  glad.c  glad_wgl.c
41/VME/Modules/glad/: glad.h  glad_wgl.h
41/VME/Shaders/: Default.frag  Geometry-Buffer.frag  Geometry-Buffer.vert  Motion-Blur.frag  Motion-Blur.vert  Velocity-Map.vert
42/: .gitignore  CMakeLists.txt  ReadMe.md
42/codeblocks/: ReflaxMan.cbp
42/src/common/: BasePlatformInterface.cpp  BasePlatformInterface.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Material.cpp  Material.h  Matrix33.cpp  Matrix33.h  Matrix44.cpp  Matrix44.h  OmniLight.cpp  OmniLight.h  Plane.cpp  Plane.h  Pulse.cpp  Pulse.h  Quaternion.cpp  Quaternion.h  Render.cpp  Render.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Skybox.cpp  Skybox.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h  Vertex.cpp  Vertex.h  defaults.h  image_headers.h  (+2 more)
42/src/linux/: LinuxPlatformInterface.cpp  LinuxPlatformInterface.h  main.cpp
42/src/windows/: Main.cpp  WindowsPlatformInterface.cpp  WindowsPlatformInterface.h  stdafx.cpp  stdafx.h
42/vs2013/: ReflaxMan.sln  ReflaxMan.vcxproj  ReflaxMan.vcxproj.filters
42/vs2013/x64/Debug/: ReflaxMan-x64_debug.exe.recipe  ReflaxMan-x64_debug.ilk  vc143.idb
42/vs2013/x64/Debug/ReflaxMan.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ReflaxMan.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+2 files in other folders)
